force-app/main/default/objects/Condition__c/Condition__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] Medical conditions related to an animal. Also linked with Treatments.</description>
    <label>Condition</label>
    <nameField>
        <displayFormat>COND{000000}</displayFormat>
        <label>Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>