force-app/main/default/objects/Condition__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Conditions</relationshipLabel>
    <relationshipName>Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>