force-app/main/default/objects/Condition__c/fields/Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>Condition_Description__c</fullName>
    <inlineHelpText>Description of the current condition which the animal has</inlineHelpText>
    <label>Condition Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>