force-app/main/default/objects/Condition__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <inlineHelpText>What type of condition does the animal have?</inlineHelpText>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Behavioural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>