force-app/main/default/objects/Condition__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <inlineHelpText>The date and time which the animal fully recovered from the condition.</inlineHelpText>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>