force-app/main/default/objects/Condition__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date and Time which the condition started or was first noticed</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>